--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -4,23 +4,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.dmasso</groupId>
-        <artifactId>multimodel-dwh</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.0.2</version>
+        <relativePath/>
     </parent>
 
     <artifactId>processor</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.dmasso</groupId>
-            <artifactId>translator</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.dmasso</groupId>
-            <artifactId>DAI</artifactId>
+            <groupId>com.github.vincentrussell</groupId>
+            <artifactId>sql-to-mongo-db-query-converter</artifactId>
+            <version>1.21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cytosm</groupId>
+            <artifactId>parent</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/cypher2sql-jar-with-dependencies.jar</systemPath>
         </dependency>
     </dependencies>
 
