--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -19,6 +19,25 @@
             <artifactId>spring-boot</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jdbi</groupId>
+            <artifactId>jdbi3-core</artifactId>
+            <version>3.36.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.vincentrussell</groupId>
             <artifactId>sql-to-mongo-db-query-converter</artifactId>
             <version>1.21</version>
