cleanup project structure refactoring new implementation details

--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -32,11 +32,35 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+        <!--    DB connectivity    -->
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
             <version>3.36.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>5.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <!--    Translation    -->
         <dependency>
             <groupId>com.github.vincentrussell</groupId>
             <artifactId>sql-to-mongo-db-query-converter</artifactId>
