--- a/processor/src/main/resources/application.yml
+++ b/processor/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 gtop:
   path: C:\Users\Dmitrii\Desktop\BIG_DATA\__3sem_Practice\multimodel-dwh\processor\src\main\resources\movies.gtop
+neo4j:
+  uri:
+
+spring:
+  neo4j:
+    uri: ${neo4j.uri}
