--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,3 +57,5 @@ services:
       - NEO4J_dbms.memory.heap.initial_size=1G
       - NEO4J_dbms_memory_heap_max__size=1G
       - NEO4J_AUTH=none
+    volumes:
+      - E:\master-thesis-data\neo4j-data:/data
