fix graph/olap agg classification error add metadata for KV engine and its usage in classification

--- a/processor/src/main/resources/metadata-v3.yaml
+++ b/processor/src/main/resources/metadata-v3.yaml
@@ -26,6 +26,9 @@ entities:
         orientation: row
         index:
           - id
+      - type: KV
+        index:
+          - id
   - name: person
     cardinality: 3000
     schema:
