--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,8 @@ services:
       - "9000:9000"
       - "9009:9009"
     volumes:
-      - C:\Users\Dmitrii\Desktop\BIG_DATA\__3sem_Practice\multimodel-dwh\processor\src\main\resources\movies-ch-schema.sql:/docker-entrypoint-initdb.d/movies-ch-schema.sql
+      - C:\Users\Dmitrii\Desktop\BIG_DATA\__3sem_Practice\multimodel-dwh\processor\src\main\resources\movies-ch-schema.sql:/docker-entrypoint-initdb.d/1_movies-ch-schema.sql
+      - C:\Users\Dmitrii\Desktop\BIG_DATA\__3sem_Practice\multimodel-dwh\processor\src\main\resources\data-load-ch.sql:/docker-entrypoint-initdb.d/2_data-load-ch.sql
       - E:\master-thesis-data\clickhouse-data:/var/lib/clickhouse/
       - E:\master-thesis-data\csv:/csv
     ulimits:
