--- a/data-generator/pom.xml
+++ b/data-generator/pom.xml
@@ -18,16 +18,40 @@
     </properties>
 
     <dependencies>
+
         <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.33</version>
+            <groupId>com.arangodb</groupId>
+            <artifactId>arangodb-java-driver</artifactId>
+            <version>7.0.0</version>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.arangodb</groupId>-->
+        <!--            <artifactId>jackson-dataformat-velocypack</artifactId>-->
+        <!--            <version>4.0.1</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.arangodb</groupId>-->
+        <!--            <artifactId>jackson-serde-vpack</artifactId>-->
+        <!--            <version>7.0.0</version>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
 
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
