--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -77,6 +77,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/cypher2sql-jar-with-dependencies.jar</systemPath>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml</groupId>
+                    <artifactId>jackson.databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--    Metadata    -->
         <dependency>
@@ -84,6 +90,23 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.arangodb</groupId>
+            <artifactId>arangodb-java-driver</artifactId>
+            <version>7.0.0</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.arangodb</groupId>-->
+<!--            <artifactId>jackson-dataformat-velocypack</artifactId>-->
+<!--            <version>4.0.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.arangodb</groupId>-->
+<!--            <artifactId>jackson-serde-vpack</artifactId>-->
+<!--            <version>7.0.0</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 
 </project>
